# STAIRS

./: .config.yaml.example  .gitignore  .pre-commit-config.yaml  FUTURE_CONSIDERATIONS.md  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
data/catalogs/: caldwell.json  ic.json  messier.json  ngc.json
data/schemas/: catalog-schema.json  telescope-schema.json
data/telescopes/: dwarf_3.json  dwarf_ii.json  equinox_2.json  evscope_2.json  odyssey_pro.json  origin_rasa.json  seestar_s30.json  seestar_s30_pro.json  seestar_s50.json
services/api/: Dockerfile  pyproject.toml
services/api/cache/: catalog_metadata.parquet  planner.duckdb.wal  telescope_profiles.parquet  user_locations.parquet
services/api/cache/targets/: empty_schema.parquet
services/api/logs/: .gitignore
services/api/src/api/: __init__.py  deps.py  main.py  schemas.py
services/api/src/api/routers/: catalogs.py  locations.py  logs.py  planner.py  profiles.py  settings.py  system.py  targets.py  weather.py
services/api/src/astro_logic/: optics.py  scoring.py  visibility.py
services/api/src/catalog/: __init__.py  catalog_models.py  duck_service.py  telescope.py  units.py
services/api/src/db/: duck_session.py  parquet_loader.py
services/api/src/planner/: location_service.py  multi_night.py  planner_models.py  scheduler.py
services/api/src/utils/: cache.py  config_manager.py  dummy_weather_api_client.py  ephemeris_manager.py  export.py  geo.py  geo_cache.py  logging_config.py  open_meteo_client.py  test_geo_cache.py  weather.py  weather_api_protocol.py
services/api/tests/: conftest.py
services/api/tests/api/: test_astronomy.py  test_logs.py  test_routers.py  test_system_settings.py
services/api/tests/astro_logic/: test_absolute_positions.py  test_optics.py  test_scoring.py  test_twilight.py  test_visibility.py
services/api/tests/catalog/: test_catalog_models.py  test_duck_service.py
services/api/tests/db/: test_parquet_loader.py
services/api/tests/planner/: test_location_service.py  test_multi_night.py  test_timezones.py
services/api/tests/utils/: test_utils.py
services/cli/: Dockerfile  pyproject.toml
services/cli/src/cli/: config.py  main.py
