[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[project]
name = "STAIRS"
version = "0.1.0"
requires-python = ">=3.14"
description = "STAIRS Astro Imaging Run Scheduler"
authors = [{ name = "Thomas Ehardt", email = "thomas.ehardt@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux (via Docker)",
    "Framework :: FastAPI",
]
dependencies = [
    "timezonefinder>=6.0.0",
    "astroplan>=0.10.0",
    "astropy>=6.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.110.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
    "pyarrow>=24.0.0",
    "duckdb>=1.5.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
    "pytz>=2026.1.post1"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/thomasehardt/STAIRS"
"Bug Tracker" = "https://github.com/thomasehardt/STAIRS/issues"
