[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[project]
name = "STAIRS-cli"
version = "0.1.0"
requires-python = ">=3.14"
description = "CLI for STAIRS Astro Imaging Run Scheduler"
authors = [{ name = "Thomas Ehardt", email = "thomas.ehardt@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux (via Docker)",
    "Framework :: FastAPI",
]
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "pytz>=2026.1.post1",
    "rich>=13.0.0",
]

[project.scripts]
stairs = "cli.main:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/thomasehardt/STAIRS"
"Bug Tracker" = "https://github.com/thomasehardt/STAIRS/issues"
